fitting of the OLS regression models done

--- a/housing-price-index-us/notebooks/housing-price-index-us.ipynb
+++ b/housing-price-index-us/notebooks/housing-price-index-us.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "#from sklearn.feature_selection import RFE\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.stats.anova import anova_lm\n",
     "import math"
    ]
   },
@@ -65,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +435,7 @@
        "15         9033.8        7.20          3.9  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,14 +454,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = MinMaxScaler()\n",
+    "if data_train.columns[0] != 'date':\n",
+    "    # initialize scaler\n",
+    "    scaler = MinMaxScaler()\n",
     "\n",
-    "data_train = pd.DataFrame(scaler.fit_transform(data_train), columns = data.columns[1:])\n",
-    "\n"
+    "    # reset index\n",
+    "    data_train_dates = data_train_dates.reset_index()['date']\n",
+    "\n",
+    "    # apply scaler\n",
+    "    data_train = pd.DataFrame(scaler.fit_transform(data_train), columns = data.columns[1:])\n",
+    "\n",
+    "    # put date column back\n",
+    "    data_train_test = data_train.insert(0, 'date', data_train_dates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## divide data into dependent and independent variable(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dep_train = data_train.pop('house_pi')\n",
+    "indep_train = data_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fit the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:               house_pi   R-squared:                       0.920\n",
+      "Model:                            OLS   Adj. R-squared:                  0.917\n",
+      "Method:                 Least Squares   F-statistic:                     259.2\n",
+      "Date:                Fri, 25 Nov 2022   Prob (F-statistic):           1.68e-94\n",
+      "Time:                        15:09:53   Log-Likelihood:                 273.39\n",
+      "No. Observations:                 189   AIC:                            -528.8\n",
+      "Df Residuals:                     180   BIC:                            -499.6\n",
+      "Df Model:                           8                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "================================================================================\n",
+      "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------\n",
+      "const            0.3569      0.064      5.612      0.000       0.231       0.482\n",
+      "unemp_rate      -0.2232      0.038     -5.931      0.000      -0.297      -0.149\n",
+      "CPI              0.0884      0.237      0.373      0.709      -0.379       0.556\n",
+      "cons_sent       -0.3142      0.036     -8.755      0.000      -0.385      -0.243\n",
+      "PI_const        -0.4867      0.186     -2.615      0.010      -0.854      -0.119\n",
+      "mortgage_int     0.7171      0.084      8.538      0.000       0.551       0.883\n",
+      "personal_inc     0.9311      0.107      8.664      0.000       0.719       1.143\n",
+      "corp_yield      -0.7300      0.094     -7.732      0.000      -0.916      -0.544\n",
+      "home_supply     -0.0223      0.030     -0.746      0.457      -0.081       0.037\n",
+      "==============================================================================\n",
+      "Omnibus:                        2.143   Durbin-Watson:                   2.027\n",
+      "Prob(Omnibus):                  0.343   Jarque-Bera (JB):                1.813\n",
+      "Skew:                           0.131   Prob(JB):                        0.404\n",
+      "Kurtosis:                       3.403   Cond. No.                         104.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Aaron\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\statsmodels\\tsa\\tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only\n",
+      "  x = pd.concat(x[::order], 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fit the model\n",
+    "if indep_train.columns[0] == 'date':\n",
+    "    indep_train_wdate = indep_train\n",
+    "    indep_train.pop('date')\n",
+    "\n",
+    "indep_train = sm.add_constant(indep_train)\n",
+    "lm = sm.OLS(dep_train, indep_train).fit()\n",
+    "\n",
+    "# print  summary\n",
+    "print(lm.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the output, one would deduce that 'CPI' and 'house_supply' can be dropped from the model. This shall be tested below using ANOVA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:               house_pi   R-squared:                       0.920\n",
+      "Model:                            OLS   Adj. R-squared:                  0.917\n",
+      "Method:                 Least Squares   F-statistic:                     348.0\n",
+      "Date:                Fri, 25 Nov 2022   Prob (F-statistic):           6.66e-97\n",
+      "Time:                        15:42:34   Log-Likelihood:                 273.05\n",
+      "No. Observations:                 189   AIC:                            -532.1\n",
+      "Df Residuals:                     182   BIC:                            -509.4\n",
+      "Df Model:                           6                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "================================================================================\n",
+      "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------\n",
+      "const            0.3680      0.052      7.039      0.000       0.265       0.471\n",
+      "unemp_rate      -0.2271      0.036     -6.324      0.000      -0.298      -0.156\n",
+      "cons_sent       -0.3071      0.030    -10.151      0.000      -0.367      -0.247\n",
+      "PI_const        -0.4619      0.098     -4.711      0.000      -0.655      -0.268\n",
+      "mortgage_int     0.6975      0.079      8.813      0.000       0.541       0.854\n",
+      "personal_inc     0.9669      0.093     10.427      0.000       0.784       1.150\n",
+      "corp_yield      -0.7304      0.092     -7.927      0.000      -0.912      -0.549\n",
+      "==============================================================================\n",
+      "Omnibus:                        2.421   Durbin-Watson:                   2.008\n",
+      "Prob(Omnibus):                  0.298   Jarque-Bera (JB):                2.110\n",
+      "Skew:                           0.147   Prob(JB):                        0.348\n",
+      "Kurtosis:                       3.427   Cond. No.                         48.7\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fit second model without 'CPI' and 'home_supply'\n",
+    "\n",
+    "# exclude the variables from the data set\n",
+    "#cpi_loc = indep_train.columns.get_loc('CPI')\n",
+    "#homesup_loc = indep_train.columns.get_loc('home_supply')\n",
+    "indep_train_model2 = indep_train.loc[:, indep_train.columns != 'CPI']\n",
+    "indep_train_model2 = indep_train_model2.loc[:, indep_train_model2.columns != 'home_supply']\n",
+    "\n",
+    "# fit model\n",
+    "lm2 = sm.OLS(dep_train, indep_train_model2).fit()\n",
+    "\n",
+    "# print summary\n",
+    "print(lm2.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "results seem to be much better, but let's apply the F-test to be sure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   df_resid       ssr  df_diff   ss_diff         F  Pr(>F)\n",
+      "0     180.0  0.613140      0.0       NaN       NaN     NaN\n",
+      "1     182.0  0.615329     -2.0 -0.002189  0.323659     NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "anova_res = anova_lm(lm2, lm)\n",
+    "print(anova_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "('Shapes must match', (9,), (1,))",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_2116\\3564109807.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindep_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindep_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'CPI'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'home_supply'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Aaron\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\pandas\\core\\ops\\common.py\u001b[0m in \u001b[0;36mnew_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     67\u001b[0m         \u001b[0mother\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitem_from_zerodim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnew_method\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Aaron\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\pandas\\core\\arraylike.py\u001b[0m in \u001b[0;36m__ne__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0munpack_zerodim_and_defer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"__ne__\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__ne__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_cmp_method\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moperator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mne\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0munpack_zerodim_and_defer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"__lt__\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Aaron\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36m_cmp_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   6055\u001b[0m             \u001b[1;31m# don't pass MultiIndex\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6056\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrstate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"ignore\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6057\u001b[1;33m                 \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mops\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcomp_method_OBJECT_ARRAY\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   6058\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6059\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Aaron\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py\u001b[0m in \u001b[0;36mcomp_method_OBJECT_ARRAY\u001b[1;34m(op, x, y)\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Shapes must match\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     71\u001b[0m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlibops\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvec_compare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: ('Shapes must match', (9,), (1,))"
+     ]
+    }
+   ],
+   "source": [
+    "test = indep_train.loc[:, indep_train.columns != 'CPI', 'home_supply']\n",
+    "test.head()"
    ]
   }
  ],
