--- a/housing-price-index-us/notebooks/housing-price-index-us.ipynb
+++ b/housing-price-index-us/notebooks/housing-price-index-us.ipynb
@@ -908,7 +908,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -922,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   },
   "vscode": {
    "interpreter": {
