small changes to script + dockerfile test run

--- a/test/notebooks/housing-price-index-us.ipynb
+++ b/test/notebooks/housing-price-index-us.ipynb
@@ -132,8 +132,7 @@
     "\n",
     "# get data folder path\n",
     "project_name = \"housing-price-index-us\"\n",
-    "#raw_data_path = os.path.join(os.environ[\"RESEARCH_PATH\"], project_name, \"data\", \"raw\")\n",
-    "raw_data_path_docker = os.path.join('tmp', 'data', 'raw')\n",
+    "raw_data_path = os.path.join(os.environ[\"RESEARCH_PATH\"], project_name, \"data\", \"raw\")\n",
     "\n",
     "# get filename\n",
     "observation_start = \"2000-01-01\"\n",
@@ -214,7 +213,7 @@
    ],
    "source": [
     "# get first column (date) to start the df\n",
-    "data = pd.read_feather(os.path.join(raw_data_path_docker, filename_list[0])).iloc[:,0:1]\n",
+    "data = pd.read_feather(os.path.join(raw_data_path, filename_list[0])).iloc[:,0:1]\n",
     "\n",
     "data.head()"
    ]
@@ -389,7 +388,7 @@
     "# join all data together in a single pd.DataFrame\n",
     "temp = 0\n",
     "for key, value in series_id_dict.items():\n",
-    "    data[key] = pd.read_feather(os.path.join(raw_data_path_docker, filename_list[temp])).iloc[:,1:]\n",
+    "    data[key] = pd.read_feather(os.path.join(raw_data_path, filename_list[temp])).iloc[:,1:]\n",
     "    temp += 1\n",
     "\n",
     "data.head()"
@@ -659,7 +658,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Text(0.5, 1.0, 'VIX')]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Aaron\\\\Documents\\\\..Studium UZH\\\\Master\\\\1. Semester\\\\Tools for Finance\\\\project\\\\housing-price-index-us\\\\reports\\\\figures,VIX.png'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.join(f'{save_folder},{i}.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -804,15 +843,13 @@
     }
    ],
    "source": [
-    "# note that the following code only works if run via Docker\n",
     "cols = data.columns[1:,]\n",
-    "#save_folder = os.path.join(os.environ['RESEARCH_PATH'], 'housing-price-index-us', 'reports', 'figures', '')\n",
-    "save_folder_docker = os.path.join('tmp', 'reports', 'figures', '')\n",
+    "save_folder = os.path.join(os.environ['RESEARCH_PATH'], 'housing-price-index-us', 'reports', 'figures', '')\n",
     "\n",
     "for i in cols:\n",
     "    plt.figure(figsize = (3,3))\n",
     "    sns.scatterplot(data = data, x = data['date'], y = i, size = 5, legend = False).set(title = i)\n",
-    "    plt.savefig(os.path.join(f'{save_folder_docker}{i}.png'))"
+    "    plt.savefig(os.path.join(f'{save_folder},{i}.png'))"
    ]
   },
   {
