--- a/test/notebooks/housing-price-index-us.ipynb
+++ b/test/notebooks/housing-price-index-us.ipynb
@@ -658,46 +658,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Text(0.5, 1.0, 'VIX')]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\Aaron\\\\Documents\\\\..Studium UZH\\\\Master\\\\1. Semester\\\\Tools for Finance\\\\project\\\\housing-price-index-us\\\\reports\\\\figures,VIX.png'"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.path.join(f'{save_folder},{i}.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [
@@ -844,12 +804,13 @@
    ],
    "source": [
     "cols = data.columns[1:,]\n",
-    "save_folder = os.path.join(os.environ['RESEARCH_PATH'], 'housing-price-index-us', 'reports', 'figures', '')\n",
+    "#save_folder = os.path.join(os.environ['RESEARCH_PATH'], 'housing-price-index-us', 'reports', 'figures', '')\n",
+    "save_folder_docker = os.path.join('app', 'images')\n",
     "\n",
     "for i in cols:\n",
     "    plt.figure(figsize = (3,3))\n",
     "    sns.scatterplot(data = data, x = data['date'], y = i, size = 5, legend = False).set(title = i)\n",
-    "    plt.savefig(os.path.join(f'{save_folder},{i}.png'))"
+    "    plt.savefig(os.path.join(f'{save_folder_docker},{i}.png'))"
    ]
   },
   {
@@ -1371,7 +1332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.9 (tags/v3.7.9:13c94747c7, Aug 17 2020, 18:58:18) [MSC v.1900 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
