comment dockerfile, fixed small mistake in script

--- a/housing-price-index-us/notebooks/housing-price-index-us.ipynb
+++ b/housing-price-index-us/notebooks/housing-price-index-us.ipynb
@@ -681,7 +681,7 @@
    "source": [
     "if docker_bool == 1:\n",
     "    cols = data.columns[1:,]\n",
-    "    save_folder_docker = os.path.join('tmp', 'reports', 'figures', '')\n",
+    "    save_folder_docker = os.path.join('reports', 'figures', '')\n",
     "\n",
     "    for i in cols:\n",
     "        plt.figure(figsize = (5,5))\n",
